--- a/index.html
+++ b/index.html
@@ -1981,7 +1981,7 @@
                 <div class="col-lg-12">
                     <ul class="list-unstyled">
                         <li class="float-end"><a href="#top">Back to top</a></li>
-                        <li><a href="https://blog.bootswatch.com/">Blog</a></li>
+                        <li><a href="https://blog.bootswatch.com/">Blog1</a></li>
                         <li><a href="https://blog.bootswatch.com/rss/">RSS</a></li>
                         <li><a href="https://twitter.com/bootswatch">Twitter</a></li>
                         <li><a href="https://github.com/thomaspark/bootswatch">GitHub</a></li>
