--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../help/">Help</a>
+                        <a class="nav-link" href="help/index.html">Help</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://blog.bootswatch.com/">Blog</a>
