--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="auto">
 
 <head>
     <meta charset="utf-8">
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="5/pulse/bootstrap.css">
     <link rel="stylesheet" href="_vendor/bootstrap-icons/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="_vendor/prismjs/themes/prism-okaidia.css">
-    <link rel="stylesheet" href="_assets/css/custom.min.css">
 
+    <link rel="stylesheet" href="_assets/css/custom.min.css">
+    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KGDJBEFF3W"></script>
     <script>
@@ -34,34 +36,10 @@
                     <li class="nav-item dropdown" data-bs-theme="light">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" id="themes">Themes</a>
                         <div class="dropdown-menu" aria-labelledby="themes">
-                            <a class="dropdown-item" href="../default/">Default</a>
+                            <a class="dropdown-item" href="./default/index.html">Default</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="../brite/">Brite</a>
-                            <a class="dropdown-item" href="../cerulean/">Cerulean</a>
-                            <a class="dropdown-item" href="../cosmo/">Cosmo</a>
-                            <a class="dropdown-item" href="../cyborg/">Cyborg</a>
-                            <a class="dropdown-item" href="../darkly/">Darkly</a>
-                            <a class="dropdown-item" href="../flatly/">Flatly</a>
-                            <a class="dropdown-item" href="../journal/">Journal</a>
-                            <a class="dropdown-item" href="../litera/">Litera</a>
-                            <a class="dropdown-item" href="../lumen/">Lumen</a>
-                            <a class="dropdown-item" href="../lux/">Lux</a>
-                            <a class="dropdown-item" href="../materia/">Materia</a>
-                            <a class="dropdown-item" href="../minty/">Minty</a>
-                            <a class="dropdown-item" href="../morph/">Morph</a>
-                            <a class="dropdown-item" href="../pulse/">Pulse</a>
-                            <a class="dropdown-item" href="../quartz/">Quartz</a>
-                            <a class="dropdown-item" href="../sandstone/">Sandstone</a>
-                            <a class="dropdown-item" href="../simplex/">Simplex</a>
-                            <a class="dropdown-item" href="../sketchy/">Sketchy</a>
-                            <a class="dropdown-item" href="../slate/">Slate</a>
-                            <a class="dropdown-item" href="../solar/">Solar</a>
-                            <a class="dropdown-item" href="../spacelab/">Spacelab</a>
-                            <a class="dropdown-item" href="../superhero/">Superhero</a>
-                            <a class="dropdown-item" href="../united/">United</a>
-                            <a class="dropdown-item" href="../vapor/">Vapor</a>
-                            <a class="dropdown-item" href="../yeti/">Yeti</a>
-                            <a class="dropdown-item" href="../zephyr/">Zephyr</a>
+                            <a class="dropdown-item" href="./pulse/index.html">Pulse</a>
+                            <a class="dropdown-item" href="./zephyr/index.html">Zephyr</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -76,15 +54,15 @@
                             <a class="dropdown-item" rel="noopener" target="_blank"
                                 href="https://jsfiddle.net/bootswatch/pu7atgj2/">Open in JSFiddle</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="../5/pulse/bootstrap.css" download>bootstrap.css</a>
-                            <a class="dropdown-item" href="../5/pulse/bootstrap.min.css" download>bootstrap.min.css</a>
+                            <a class="dropdown-item" href="5/pulse/bootstrap.css" download>bootstrap.css</a>
+                            <a class="dropdown-item" href="5/pulse/bootstrap.min.css" download>bootstrap.min.css</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="../5/pulse/bootstrap.rtl.css" download>bootstrap.rtl.css</a>
-                            <a class="dropdown-item" href="../5/pulse/bootstrap.rtl.min.css"
+                            <a class="dropdown-item" href="5/pulse/bootstrap.rtl.css" download>bootstrap.rtl.css</a>
+                            <a class="dropdown-item" href="5/pulse/bootstrap.rtl.min.css"
                                 download>bootstrap.rtl.min.css</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="../5/pulse/_variables.scss" download>_variables.scss</a>
-                            <a class="dropdown-item" href="../5/pulse/_bootswatch.scss" download>_bootswatch.scss</a>
+                            <a class="dropdown-item" href="5/pulse/_variables.scss" download>_variables.scss</a>
+                            <a class="dropdown-item" href="5/pulse/_bootswatch.scss" download>_bootswatch.scss</a>
                         </div>
                     </li>
                 </ul>
@@ -1977,33 +1955,33 @@
             </div>
         </div>
 
+
         <footer id="footer">
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="list-unstyled">
                         <li class="float-end"><a href="#top">Back to top</a></li>
-                        <li><a href="https://blog.bootswatch.com/">Blog</a></li>
-                        <li><a href="https://blog.bootswatch.com/rss/">RSS</a></li>
-                        <li><a href="https://twitter.com/bootswatch">Twitter</a></li>
                         <li><a href="https://github.com/thomaspark/bootswatch">GitHub</a></li>
-                        <li><a href="../help/#api">API</a></li>
-                        <li><a href="../help/#donate">Donate</a></li>
                     </ul>
-                    <p>Made by <a href="https://thomaspark.co/">Thomas Park</a>.</p>
-                    <p>Code released under the <a
-                            href="https://github.com/thomaspark/bootswatch/blob/master/LICENSE">MIT License</a>.</p>
-                    <p>Based on <a href="https://getbootstrap.com/" rel="nofollow">Bootstrap</a>. Icons from <a
-                            href="https://icons.getbootstrap.com/" rel="nofollow">Bootstrap Icons</a>. Web fonts from <a
-                            href="https://fonts.google.com/" rel="nofollow">Google</a>.</p>
+                    <p>Based on <a href="https://getbootstrap.com/" rel="nofollow">Bootstrap</a>
+                        . Icons from
+                        <a href="https://icons.getbootstrap.com/" rel="nofollow">Bootstrap Icons</a>
+                        . Web fonts from
+                        <a href="https://fonts.google.com/" rel="nofollow">Google</a>.
+                    </p>
 
                 </div>
             </div>
-        </footer>
-    </div>
 
-    <script src="_vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="_vendor/prismjs/prism.js" data-manual></script>
-    <script src="_assets/js/custom.js"></script>
+        </footer>
+
+
+
+
+        <script src="_vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="_vendor/prismjs/prism.js" data-manual></script>
+        <script src="_assets/js/custom.js"></script>
+
 
 </body>
 
