--- a/index.html
+++ b/index.html
@@ -8,55 +8,62 @@
     <meta name="copyright" content="Copyright © 2025">
     <meta name="revisit-after" content="28 day">
     <title>Bootstrap 5</title>
-    <link rel="stylesheet" href="css/bootstrap-grid.css">
+    <!-- <link rel="stylesheet" href="css/bootstrap-grid.css">
     <link rel="stylesheet" href="css/bootstrap-reboot.css">
-    <link rel="stylesheet" href="css/bootstrap-utilities.css">
+    <link rel="stylesheet" href="css/bootstrap-utilities.css"> -->
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
-    <h1 style="text-align: center;">Bootstrap 5</h1>
-    <div class="grid">
-        <header class="header">
-            <!-- Navigation -->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-                <div class="container">
-                    <a class="navbar-brand offset-lg-1" href="/">BasicIT.org</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarResponsive">
 
-                        <ul class="navbar-nav ml-auto">
-
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="?all" id="navbarDropdownMenuLink"
-                                    aria-haspopup="true" aria-expanded="false">
-                                    fghdgfdgdfggk;ksjdlkfjh
-                                </a>
-                            </li>
-                        </ul>
-
-
-                    </div>
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-5 v1">
+                    <a class="navbar-brand" href="#">Stepik курс - Frontend разработчик <br>на HTML, CSS и
+                        JavaScript</a>
                 </div>
-            </nav>
-        </header>
-        <aside class="sidebar">
-            Меню
-        </aside>
-        <main class="content">
-            Основной контент.
-        </main>
-        <footer class="footer">
-            футер
-        </footer>
-    </div>
-    <br>
-    <br>
-    <br>
+                <div class="col-3 v1">
+                    <h2><a class="navbar-brand " href="#">
+                            <img src="img/bootstrap.svg" alt="bootstrap.svg" width="60" height="48"
+                                class="d-inline-block align-text-top">
+                            Bootstrap
+                        </a></h2>
+                </div>
+                <div class="col-3  v1">
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
+                        <button class="btn btn-outline-success" type="submit">Поиск</button>
+                    </form>
+                </div>
+                <div class="col-1 v1">
+                    <a href="/users/1044029479/profile">
+                        <img class="navbar__profile-img"
+                            src="https://stepik.org/users/1044029479/1241f8e882e3ebc2dad2856e5ee3d22c197ac770/avatar.svg"
+                            style="width: 50px;">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="bootstrap/js/bootstrap.js"></script>
 </body>
 
 </html>
