--- a/index.html
+++ b/index.html
@@ -158,20 +158,222 @@
                                     <li>Bootstrap также позволяет легко создавать адаптивные дизайны</li>
                                 </ul>
 
+                                <div class="w3-example">
+                                    <h3>Bootstrap 5 Example</h3>
+                                    <div class="w3-code notranslate htmlHigh">
+                                        &lt;div class=&quot;container-fluid p-5 bg-primary text-white
+                                        text-center&quot;&gt;<br>&nbsp;
+                                        &lt;h1&gt;My First Bootstrap Page&lt;/h1&gt;<br>&nbsp; &lt;p&gt;Resize this
+                                        responsive page to
+                                        see the effect!&lt;/p&gt; <br>&lt;/div&gt;<br><br>&lt;div class=&quot;container
+                                        mt-5&quot;&gt;<br>&nbsp; &lt;div
+                                        class=&quot;row&quot;&gt;<br>&nbsp;&nbsp;&nbsp; &lt;div
+                                        class=&quot;col-sm-4&quot;&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        &lt;h3&gt;Column 1&lt;/h3&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;p&gt;Lorem
+                                        ipsum dolor sit
+                                        amet, consectetur adipisicing
+                                        elit...&lt;/p&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        &lt;p&gt;Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                        laboris...&lt;/p&gt;<br>&nbsp;&nbsp;&nbsp;
+                                        &lt;/div&gt;<br>&nbsp;&nbsp;&nbsp; &lt;div
+                                        class=&quot;col-sm-4&quot;&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        &lt;h3&gt;Column 2&lt;/h3&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;p&gt;Lorem
+                                        ipsum dolor sit
+                                        amet, consectetur adipisicing
+                                        elit...&lt;/p&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        &lt;p&gt;Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                        laboris...&lt;/p&gt;<br>&nbsp;&nbsp;&nbsp;
+                                        &lt;/div&gt;<br>&nbsp;&nbsp;&nbsp; &lt;div
+                                        class=&quot;col-sm-4&quot;&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        &lt;h3&gt;Column 3&lt;/h3&gt; <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;p&gt;Lorem
+                                        ipsum dolor sit
+                                        amet, consectetur adipisicing
+                                        elit...&lt;/p&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        &lt;p&gt;Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                        laboris...&lt;/p&gt;<br>&nbsp;&nbsp;&nbsp;
+                                        &lt;/div&gt;<br>&nbsp; &lt;/div&gt;<br>&lt;/div&gt;</div>
+
+                                </div>
+
+                                <div class="container-fluid p-5 bg-primary text-white text-center">
+                                    <h1>My First Bootstrap Page</h1>
+                                    <p>Resize this responsive page to see the effect!</p>
+                                </div>
+
+                                <div class="container mt-5">
+                                    <div class="row">
+                                        <div class="col-sm-4">
+                                            <h3>Изучение Bootstrap</h3>
+
+                                            <p> Bootstrap – это не просто набор стилей, а целая экосистема, упрощающая
+                                                разработку адаптивных и отзывчивых веб-сайтов.
+                                                Его популярность обусловлена скоростью разработки, последовательностью
+                                                дизайна и кросс-браузерной совместимостью.</p>
+                                            <br>
+                                            <strong>Основы сетки:</strong>
+                                            <br>
+
+                                            <p>Сетка Bootstrap является краеугольным камнем структуры любого сайта. Она
+                                                базируется на 12-колоночной системе,
+                                                позволяющей гибко располагать контент. Понимание классов container, row
+                                                и col-*-* – ключ к управлению макетом. container
+                                                центрирует содержимое на странице, row создает горизонтальные полосы, а
+                                                col-*-* определяет ширину колонки на разных
+                                                устройствах.</p>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <h3> Компоненты Bootstrap:</h3>
+                                            <p> Bootstrap предоставляет широкий спектр готовых компонентов:
+                                                навигационные панели, кнопки, формы, модальные окна,
+                                                карусели и многое другое. Использование этих компонентов значительно
+                                                ускоряет разработку, так как избавляет от
+                                                необходимости писать код с нуля. Каждый компонент имеет свои CSS-классы
+                                                и JavaScript-функции, облегчающие его настройку
+                                                и интеграцию.</p>
+
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <h3>Адаптивность и отзывчивость:</h3>
+                                            <p>
+
+                                                Адаптивность Bootstrap обеспечивается медиа-запросами, которые позволяют
+                                                применять разные стили в зависимости от размера
+                                                экрана устройства. Классы, такие как col-sm-*, col-md-*, col-lg-*, и
+                                                col-xl-*, определяют ширину колонки на маленьких,
+                                                средних, больших и очень больших экранах, соответственно. Это позволяет
+                                                создавать сайты, которые выглядят отлично на
+                                                любых устройствах.
+                                                <br>
+
+                                                <strong> Кастомизация Bootstrap: </strong>
+                                                <br>
+
+                                                Хотя Bootstrap предлагает стили «из коробки», часто требуется
+                                                кастомизация для соответствия уникальному дизайну проекта.
+                                                Это можно сделать несколькими способами: переопределение стилей в
+                                                собственном CSS-файле, использование SASS для
+                                                изменения переменных Bootstrap, или создание пользовательской сборки
+                                                Bootstrap, включающей только необходимые
+                                                компоненты.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <hr>
+
+                                <h3>Версии Bootstrap</h3>
+
+                                <p>
+                                    Bootstrap 5 (выпущен в 2021 году) — это новейшая версия Bootstrap (выпущенной в 2013
+                                    году) с новыми компонентами, более
+                                    быстрой загрузкой стилей и улучшенной адаптивностью. <br>
+                                    <br>
+                                    Bootstrap 5 поддерживает последние стабильные версии всех основных браузеров и
+                                    платформ. Однако Internet Explorer 11 и
+                                    более ранние версии не поддерживаются. <br>
+                                    <br>
+                                    Основное отличие Bootstrap 5 от Bootstrap 3 и 4 заключается в том, что Bootstrap 5
+                                    перешёл на ванильный JavaScript
+                                    вместо jQuery.
+                                </p>
 
 
 
+                                <div class="w3-panel ws-note">
+                                    <p style="margin-bottom:8px"><strong>Bootstrap 3</strong> <a
+                                            href="/bootstrap/default.asp">Примечание:</a> и <a
+                                            href="/bootstrap4/default.asp">Bootstrap 4</a> по-прежнему поддерживаются
+                                        командой разработчиков для
+                                        исправления критических ошибок и внесения изменений в документацию. Их
+                                        использование совершенно безопасно.
+                                        Однако новые функции в них добавляться не будут.</p>
+                                </div>
 
+                                <h3>Зачем использовать Bootstrap?</h3>
+                                <ul>
+                                    <li><strong>Простота в использовании</strong>: Любой, кто обладает базовыми знаниями
+                                        HTML и CSS, может начать использовать Bootstrap</li>
+                                    <li><strong>Адаптивные функции:</strong> Адаптивный CSS в Bootstrap подстраивается
+                                        под телефоны, планшеты и настольные компьютеры</li>
+                                    <li><strong>Подход, ориентированный на мобильные устройства:</strong> В Bootstrap
+                                        стили, ориентированные на мобильные устройства, являются
+                                        частью основного фреймворка</li>
+                                    <li><strong>Совместимость с браузерами:</strong> Bootstrap 5 совместим со всеми
+                                        современными браузерами (Chrome, Firefox, Edge, Safari и
+                                        Opera). <strong>Обратите внимание, </strong>что если вам нужна поддержка IE11 и
+                                        более ранних версий, вам нужно использовать либо BS4,
+                                        либо BS3.</li>
+                                </ul>
 
+                                <h3>Две базовые страницы Bootstrap по 5 страниц</h3>
 
+                                <p>В следующем примере показан код для базовой страницы Bootstrap 5 (с адаптивным
+                                    контейнером фиксированной ширины).:</p>
 
+                                <div class="w3-example">
+                                    <h3>Container Example</h3>
+                                    <div class="w3-code notranslate htmlHigh">
+                                        &lt;!DOCTYPE html&gt;<br>&lt;html
+                                        lang=&quot;en&quot;&gt;<br>&lt;head&gt;<br>&nbsp; &lt;title&gt;Bootstrap
+                                        Example&lt;/title&gt;<br>&nbsp; &lt;meta charset=&quot;utf-8&quot;&gt;<br>&nbsp;
+                                        &lt;meta
+                                        name=&quot;viewport&quot; content=&quot;width=device-width,
+                                        initial-scale=1&quot;&gt;<br>&nbsp; &lt;link
+                                        href=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css&quot;
+                                        rel=&quot;stylesheet&quot;&gt;<br>&nbsp; &lt;script
+                                        src=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js&quot;&gt;&lt;/script&gt;<br>
+                                        &lt;/head&gt;<br>&lt;body&gt;<br><br>&lt;div
+                                        class=&quot;container&quot;&gt;<br>&nbsp; &lt;h1&gt;My First
+                                        Bootstrap Page&lt;/h1&gt;<br>&nbsp; &lt;p&gt;This part is inside a .container
+                                        class.&lt;/p&gt;
+                                        <br>&nbsp; &lt;p&gt;The .container class provides a responsive fixed width
+                                        container.&lt;/p&gt; <br>&lt;/div&gt;<br>
+                                        <br>&lt;/body&gt;<br>&lt;/html&gt;
+                                    </div>
+                                </div>
 
+                                <div class="container v1">
+                                    <h1>Моя первая загрузочная страница</h1>
+                                    <p>Эта часть находится внутри класса .container.</p>
+                                    <p>Класс .container предоставляет адаптивный контейнер фиксированной ширины..</p>
+                                </div>
+                                <hr>
+                                <p>В следующем примере показан код для базовой страницы Bootstrap 5 (с контейнером
+                                    полной ширины).:</p>
 
+                                <div class="w3-example">
+                                    <h3>Container Fluid Example</h3>
+                                    <div class="w3-code notranslate htmlHigh">
+                                        &lt;!DOCTYPE html&gt;<br>&lt;html
+                                        lang=&quot;en&quot;&gt;<br>&lt;head&gt;<br>&nbsp; &lt;title&gt;Bootstrap
+                                        Example&lt;/title&gt;<br>&nbsp; &lt;meta charset=&quot;utf-8&quot;&gt;<br>&nbsp;
+                                        &lt;meta
+                                        name=&quot;viewport&quot; content=&quot;width=device-width,
+                                        initial-scale=1&quot;&gt;<br>&nbsp; &lt;link
+                                        href=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css&quot;
+                                        rel=&quot;stylesheet&quot;&gt;<br>&nbsp; &lt;script
+                                        src=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js&quot;&gt;&lt;/script&gt;<br>
+                                        &lt;/head&gt;<br>&lt;body&gt;<br><br>&lt;div
+                                        class=&quot;container-fluid&quot;&gt;<br>&nbsp; &lt;h1&gt;My First
+                                        Bootstrap Page&lt;/h1&gt;<br>&nbsp; &lt;p&gt;This part is inside a
+                                        .container-fluid
+                                        class.&lt;/p&gt;<br>&nbsp; &lt;p&gt;The .container-fluid class provides a full
+                                        width
+                                        container, spanning the entire width of the viewport.&lt;/p&gt;
+                                        <br>&lt;/div&gt;<br><br>&lt;/body&gt;<br>&lt;/html&gt;
+                                    </div>
+                                    <a target="_blank" href="tryit.asp?filename=trybs_gs_container-fluid&stacked=h"
+                                        class="w3-btn w3-margin-bottom">Try
+                                        it Yourself &raquo;</a>
+                                </div>
 
-
-
-
-
+                                <div class="container-fluid v1">
+                                    <h1>Моя загрузочная страница</h1>
+                                    <p>Эта часть находится внутри класса .container-fluid.</p>
+                                    <p>Класс .container-fluid предоставляет полноразмерный контейнер, занимающий всю
+                                        ширину видового экрана.</p>
+                                </div>
 
 
 
@@ -188,7 +390,7 @@
                     </div>
 
 
-                    <aside class="column is-3-desktop is-12-tablet is-12-mobile w-sidebar" id="w-sidebar">
+                    <aside class=" column is-3-desktop is-12-tablet is-12-mobile w-sidebar" id="w-sidebar">
 
                         <section class="w-region w-region-sidebar-toc">
                             <div class="w-block" id="block-book-toc">
@@ -197,13 +399,12 @@
 
                                     <ul class="w-block-menu list-unstyled">
                                         <li class="is-active">
-                                            <a href="/layout/bootstrap5/getting_started_with_bootstrap"
-                                                class="is-active">Начало
+                                            <a href="index.html" class="is-active">Начало
                                                 работы с Bootstrap</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_containers" hreflang="ru">Контейнеры
+                                            <a href="./html/bootstrap_containers.html" hreflang="ru">Контейнеры
                                                 Bootstrap 5</a>
 
                                         </li>
@@ -226,7 +427,8 @@
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_forms" hreflang="ru">Формы в Bootstrap
+                                            <a href="/layout/bootstrap5/bootstrap_forms" hreflang="ru">Формы
+                                                в Bootstrap
                                                 5</a>
 
                                         </li>
@@ -334,32 +536,22 @@
             </div>
         </main>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <br>
+        <div class="w3-clear nextprev">
+            <a class="w3-left w3-btn" href="index.html">❮ Предыдущий</a>
+            <a class="w3-right w3-btn" href="./html/bootstrap_containers.html">Следующий ❯</a>
+        </div>
 
 
         <footer>
             <div class="container container_text v1">
                 <div class="row">
                     <div class="col">
-                        <p>© 2025 Copyright: VViller</p>
+                        <p>© 2026 Copyright: VViller</p>
                     </div>
 
                     <div class="col">
-                        <p>27.12.2025</p>
+                        <p>02.01.2026</p>
                     </div>
                 </div>
             </div>
