--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                                     <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
                                         <li class="nav-item col-6 col-lg-auto">
                                             <a class="nav-link py-2 px-0 px-lg-2"
-                                                href="https://github.com/Viktor3691/Bootstrap.io" target="_blank"
-                                                rel="noopener" aria-label="GitHub">
+                                                href="https://github.com/Viktor3691/Lessons-Bootstrap.io"
+                                                target="_blank" rel="noopener" aria-label="GitHub">
                                                 <img src="./img/github.svg.png" alt="github" class="git">
                                                 <small class="d-lg-none ms-2">GitHub</small>
                                             </a>
