--- a/html/bootstrap_containers.html
+++ b/html/bootstrap_containers.html
@@ -346,12 +346,9 @@
 
 
 
+    <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../bootstrap/js/scripts.js"></script>
 
-
-
-
-    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="bootstrap/js/scripts.js"></script>
 
 </body>
 
