--- a/html/bootstrap_containers.html
+++ b/html/bootstrap_containers.html
@@ -79,8 +79,8 @@
                                     <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
                                         <li class="nav-item col-6 col-lg-auto">
                                             <a class="nav-link py-2 px-0 px-lg-2"
-                                                href="https://github.com/Viktor3691/Bootstrap.io" target="_blank"
-                                                rel="noopener" aria-label="GitHub">
+                                                href="https://github.com/Viktor3691/Lessons-Bootstrap.io"
+                                                target="_blank" rel="noopener" aria-label="GitHub">
                                                 <img src="../img/github.svg.png" alt="github" class="git">
                                                 <small class="d-lg-none ms-2">GitHub</small>
                                             </a>
@@ -173,13 +173,13 @@
                                 <div class="w-block-content">
 
                                     <ul class="w-block-menu list-unstyled">
-                                        <li class="is-active">
-                                            <a href="../index.html" class="is-active">Начало
+                                        <li>
+                                            <a href="../index.html">Начало
                                                 работы с Bootstrap</a>
 
                                         </li>
                                         <li>
-                                            <a href="bootstrap_containers" hreflang="ru">Контейнеры
+                                            <a href="bootstrap_containers" hreflang="ru" class="is-active">Контейнеры
                                                 Bootstrap 5</a>
 
                                         </li>
