--- a/index.html
+++ b/index.html
@@ -139,10 +139,30 @@
                         <div class="w-title">
                             <div class="container">
                                 <h1>Bootstrap 5 Начало работы</h1>
+
                             </div>
                         </div>
+
                         <div class="column is-9-desktop is-12-tablet is-12-mobile w-content">
                             <div data-drupal-messages-fallback class="hidden"></div>
+
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <div class="w3-clear nextprev">
+                                            <a class="w3-left w3-btn" href="index.html">&#10094; &#10094; &#10094;
+                                                Предыдущий</a>
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="w3-clear nextprev">
+                                            <a class="w3-right w3-btn" href="./html/bootstrap_containers.html">Следующий
+                                                &#10095; &#10095; &#10095;</a>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
 
                             <section id="w-main">
 
@@ -537,10 +557,25 @@
         </main>
 
         <br>
-        <div class="w3-clear nextprev">
-            <a class="w3-left w3-btn" href="index.html">❮ Предыдущий</a>
-            <a class="w3-right w3-btn" href="./html/bootstrap_containers.html">Следующий ❯</a>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <div class="w3-clear nextprev">
+                        <a class="w3-left w3-btn" href="index.html">&#10094; &#10094; &#10094; Предыдущий</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="w3-clear nextprev">
+                        <a class="w3-right w3-btn" href="./html/bootstrap_containers.html">Следующий
+                            &#10095; &#10095; &#10095;</a>
+                    </div>
+                </div>
+
+            </div>
         </div>
+
+
 
 
         <footer>
