--- a/html/bootstrap_containers.html
+++ b/html/bootstrap_containers.html
@@ -311,11 +311,26 @@
             </div>
         </main>
 
-        <br>
-        <div class="w3-clear nextprev">
-            <a class="w3-left w3-btn" href="../index.html">&#10094; Previous</a>
-            <a class="w3-right w3-btn" href="./bootstrap_containers.html">Next &#10095;</a>
+
+
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <div class="w3-clear nextprev">
+                        <a class="w3-left w3-btn" href="../index.html">&#10094; &#10094; &#10094; Предыдущий</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="w3-clear nextprev">
+                        <a class="w3-right w3-btn" href="#">Следующий
+                            &#10095; &#10095; &#10095;</a>
+                    </div>
+                </div>
+
+            </div>
         </div>
+
+
 
 
         <footer>
