--- a/html/bootstrap_containers.html
+++ b/html/bootstrap_containers.html
@@ -157,7 +157,8 @@
                                     </div>
                                     <div class="col">
                                         <div class="w3-clear nextprev">
-                                            <a class="w3-right w3-btn" href="#">Следующий
+                                            <a class="w3-right w3-btn"
+                                                href="../html/bootstrap_grid_system.html">Следующий
                                                 &#10095; &#10095; &#10095;</a>
                                         </div>
                                     </div>
@@ -522,12 +523,13 @@
 
                                         </li>
                                         <li>
-                                            <a href="bootstrap_containers" hreflang="ru" class="is-active">Контейнеры
+                                            <a href="bootstrap_containers.html" hreflang="ru"
+                                                class="is-active">Контейнеры
                                                 Bootstrap 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_grid_system" hreflang="ru">Система
+                                            <a href="../html/bootstrap_grid_system.html" hreflang="ru">Система
                                                 сеток Bootstrap 5</a>
 
                                         </li>
@@ -662,7 +664,7 @@
                 </div>
                 <div class="col">
                     <div class="w3-clear nextprev">
-                        <a class="w3-right w3-btn" href="#">Следующий
+                        <a class="w3-right w3-btn" href="../html/bootstrap_grid_system.html">Следующий
                             &#10095; &#10095; &#10095;</a>
                     </div>
                 </div>
