--- a/html/bootstrap_tables.html
+++ b/html/bootstrap_tables.html
@@ -141,7 +141,7 @@
                     <div class="container_text">
                         <div class="w-title">
                             <div class="container">
-                                <h1>Bootstrap 5 Сетки</h1>
+                                <h1>Таблицы в Bootstrap 5</h1>
                             </div>
                         </div>
                         <div class="column is-9-desktop is-12-tablet is-12-mobile w-content">
@@ -167,7 +167,7 @@
                             </div>
 
                             <section id="w-main">
-                                <h3>Система сеток Bootstrap 5</h3>
+                                <h3>Базовая таблица</h3>
 
 
                             </section>
@@ -194,7 +194,7 @@
 
                                         </li>
                                         <li>
-                                            <a href="bootstrap_grid_system.html" hreflang="ru" class="is-active">Система
+                                            <a href="bootstrap_grid_system.html" hreflang="ru">Система
                                                 сеток Bootstrap 5</a>
 
                                         </li>
@@ -205,7 +205,8 @@
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_tables" hreflang="ru">Таблицы в
+                                            <a href="/layout/bootstrap5/bootstrap_tables" hreflang="ru"
+                                                class="is-active">Таблицы в
                                                 Bootstrap
                                                 5</a>
 
