--- a/html/bootstrap_typography.html
+++ b/html/bootstrap_typography.html
@@ -141,7 +141,7 @@
                     <div class="container_text">
                         <div class="w-title">
                             <div class="container">
-                                <h1>Bootstrap 5 Сетки</h1>
+                                <h1>Типографика в Bootstrap 5</h1>
                             </div>
                         </div>
                         <div class="column is-9-desktop is-12-tablet is-12-mobile w-content">
@@ -151,14 +151,14 @@
                                 <div class="row">
                                     <div class="col-6">
                                         <div class="w3-clear nextprev">
-                                            <a class="w3-left w3-btn" href="../html/bootstrap_containers.html">&#10094;
+                                            <a class="w3-left w3-btn" href="../html/bootstrap_grid_system.html">&#10094;
                                                 &#10094; &#10094;
                                                 Предыдущий</a>
                                         </div>
                                     </div>
                                     <div class="col">
                                         <div class="w3-clear nextprev">
-                                            <a class="w3-right w3-btn" href="#">Следующий
+                                            <a class="w3-right w3-btn" href="../html/bootstrap_tables.html">Следующий
                                                 &#10095; &#10095; &#10095;</a>
                                         </div>
                                     </div>
@@ -167,7 +167,7 @@
                             </div>
 
                             <section id="w-main">
-                                <h3>Система сеток Bootstrap 5</h3>
+                                <h3>Основной текст</h3>
 
 
                             </section>
@@ -194,116 +194,116 @@
 
                                         </li>
                                         <li>
-                                            <a href="bootstrap_grid_system.html" hreflang="ru" class="is-active">Система
+                                            <a href="../html//bootstrap_grid_system.html" hreflang="ru">Система
                                                 сеток Bootstrap 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_typography" hreflang="ru">Типографика
+                                            <a href="bootstrap_typography" hreflang="ru" class="is-active">Типографика
                                                 в
                                                 Bootstrap 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_tables" hreflang="ru">Таблицы в
+                                            <a href="../html//bootstrap_tables" hreflang="ru">Таблицы в
                                                 Bootstrap
                                                 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_forms" hreflang="ru">Формы
+                                            <a href="../html/bootstrap_forms" hreflang="ru">Формы
                                                 в Bootstrap
                                                 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_buttons" hreflang="ru">Кнопки в
+                                            <a href="../html/bootstrap_buttons" hreflang="ru">Кнопки в
                                                 Bootstrap
                                                 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_images" hreflang="ru">Изображения в
+                                            <a href="../html/bootstrap_images" hreflang="ru">Изображения в
                                                 Bootstrap 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_dropdowns" hreflang="ru">Выпадающие
+                                            <a href="../html/bootstrap_dropdowns" hreflang="ru">Выпадающие
                                                 меню</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_button_groups" hreflang="ru">Группа
+                                            <a href="../html/bootstrap_button_groups" hreflang="ru">Группа
                                                 кнопок</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_input_groups" hreflang="ru">Группа
+                                            <a href="../html/bootstrap_input_groups" hreflang="ru">Группа
                                                 полей
                                                 ввода</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_collapse" hreflang="ru">Сворачиваемое
+                                            <a href="../html/bootstrap_collapse" hreflang="ru">Сворачиваемое
                                                 содержимое</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_navs" hreflang="ru">Навигация в
+                                            <a href="../html/bootstrap_navs" hreflang="ru">Навигация в
                                                 Bootstrap</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_navbars" hreflang="ru">Панель
+                                            <a href="../html/bootstrap_navbars" hreflang="ru">Панель
                                                 навигации</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_breadcrumbs" hreflang="ru">Хлебные
+                                            <a href="../html/bootstrap_breadcrumbs" hreflang="ru">Хлебные
                                                 крошки
                                                 в Bootstrap 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_pagination" hreflang="ru">Пагинация в
+                                            <a href="../html/bootstrap_pagination" hreflang="ru">Пагинация в
                                                 Bootstrap 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_badge" hreflang="ru">Значки в
+                                            <a href="../html/bootstrap_badge" hreflang="ru">Значки в
                                                 Bootstrap
                                                 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_alerts" hreflang="ru">Уведомления в
+                                            <a href="../html/bootstrap_alerts" hreflang="ru">Уведомления в
                                                 Bootstrap 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_modal" hreflang="ru">Модальные
+                                            <a href="../html/bootstrap_modal" hreflang="ru">Модальные
                                                 окна</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_progress_bars" hreflang="ru">Прогресс
+                                            <a href="../html/bootstrap_progress_bars" hreflang="ru">Прогресс
                                                 в
                                                 Bootstrap 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_list_groups" hreflang="ru">Группы
+                                            <a href="../html/bootstrap_list_groups" hreflang="ru">Группы
                                                 списков</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_cards" hreflang="ru">Карточки в
+                                            <a href="../html/bootstrap_cards" hreflang="ru">Карточки в
                                                 Bootstrap
                                                 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_carousel" hreflang="ru">Карусель в
+                                            <a href="../html/bootstrap_carousel" hreflang="ru">Карусель в
                                                 Bootstrap 5</a>
 
                                         </li>
