--- a/html/bootstrap_grid_system.html
+++ b/html/bootstrap_grid_system.html
@@ -199,13 +199,13 @@
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_typography" hreflang="ru">Типографика
+                                            <a href="../html/bootstrap_typography.html" hreflang="ru">Типографика
                                                 в
                                                 Bootstrap 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="/layout/bootstrap5/bootstrap_tables" hreflang="ru">Таблицы в
+                                            <a href="../html/bootstrap_tables.html" hreflang="ru">Таблицы в
                                                 Bootstrap
                                                 5</a>
 
