--- a/html/bootstrap_typography.html
+++ b/html/bootstrap_typography.html
@@ -194,116 +194,117 @@
 
                                         </li>
                                         <li>
-                                            <a href="../html//bootstrap_grid_system.html" hreflang="ru">Система
+                                            <a href="../html/bootstrap_grid_system.html" hreflang="ru">Система
                                                 сеток Bootstrap 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="bootstrap_typography" hreflang="ru" class="is-active">Типографика
+                                            <a href="bootstrap_typography.html" hreflang="ru"
+                                                class="is-active">Типографика
                                                 в
                                                 Bootstrap 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="../html//bootstrap_tables" hreflang="ru">Таблицы в
+                                            <a href="../html/bootstrap_tables.html" hreflang="ru">Таблицы в
                                                 Bootstrap
                                                 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="../html/bootstrap_forms" hreflang="ru">Формы
+                                            <a href="../html/bootstrap_forms.html" hreflang="ru">Формы
                                                 в Bootstrap
                                                 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="../html/bootstrap_buttons" hreflang="ru">Кнопки в
+                                            <a href="../html/bootstrap_buttons.html" hreflang="ru">Кнопки в
                                                 Bootstrap
                                                 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="../html/bootstrap_images" hreflang="ru">Изображения в
+                                            <a href="../html/bootstrap_images.html" hreflang="ru">Изображения в
                                                 Bootstrap 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="../html/bootstrap_dropdowns" hreflang="ru">Выпадающие
+                                            <a href="../html/bootstrap_dropdowns.html" hreflang="ru">Выпадающие
                                                 меню</a>
 
                                         </li>
                                         <li>
-                                            <a href="../html/bootstrap_button_groups" hreflang="ru">Группа
+                                            <a href="../html/bootstrap_button_groups.html" hreflang="ru">Группа
                                                 кнопок</a>
 
                                         </li>
                                         <li>
-                                            <a href="../html/bootstrap_input_groups" hreflang="ru">Группа
+                                            <a href="../html/bootstrap_input_groups.html" hreflang="ru">Группа
                                                 полей
                                                 ввода</a>
 
                                         </li>
                                         <li>
-                                            <a href="../html/bootstrap_collapse" hreflang="ru">Сворачиваемое
+                                            <a href="../html/bootstrap_collapse.html" hreflang="ru">Сворачиваемое
                                                 содержимое</a>
 
                                         </li>
                                         <li>
-                                            <a href="../html/bootstrap_navs" hreflang="ru">Навигация в
+                                            <a href="../html/bootstrap_navs.html" hreflang="ru">Навигация в
                                                 Bootstrap</a>
 
                                         </li>
                                         <li>
-                                            <a href="../html/bootstrap_navbars" hreflang="ru">Панель
+                                            <a href="../html/bootstrap_navbars.html" hreflang="ru">Панель
                                                 навигации</a>
 
                                         </li>
                                         <li>
-                                            <a href="../html/bootstrap_breadcrumbs" hreflang="ru">Хлебные
+                                            <a href="../html/bootstrap_breadcrumbs.html" hreflang="ru">Хлебные
                                                 крошки
                                                 в Bootstrap 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="../html/bootstrap_pagination" hreflang="ru">Пагинация в
+                                            <a href="../html/bootstrap_pagination.html" hreflang="ru">Пагинация в
                                                 Bootstrap 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="../html/bootstrap_badge" hreflang="ru">Значки в
+                                            <a href="../html/bootstrap_badge.html" hreflang="ru">Значки в
                                                 Bootstrap
                                                 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="../html/bootstrap_alerts" hreflang="ru">Уведомления в
+                                            <a href="../html/bootstrap_alerts.html" hreflang="ru">Уведомления в
                                                 Bootstrap 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="../html/bootstrap_modal" hreflang="ru">Модальные
+                                            <a href="../html/bootstrap_modal.html" hreflang="ru">Модальные
                                                 окна</a>
 
                                         </li>
                                         <li>
-                                            <a href="../html/bootstrap_progress_bars" hreflang="ru">Прогресс
+                                            <a href="../html/bootstrap_progress_bars.html" hreflang="ru">Прогресс
                                                 в
                                                 Bootstrap 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="../html/bootstrap_list_groups" hreflang="ru">Группы
+                                            <a href="../html/bootstrap_list_groups.html" hreflang="ru">Группы
                                                 списков</a>
 
                                         </li>
                                         <li>
-                                            <a href="../html/bootstrap_cards" hreflang="ru">Карточки в
+                                            <a href="../html/bootstrap_cards.html" hreflang="ru">Карточки в
                                                 Bootstrap
                                                 5</a>
 
                                         </li>
                                         <li>
-                                            <a href="../html/bootstrap_carousel" hreflang="ru">Карусель в
+                                            <a href="../html/bootstrap_carousel.html" hreflang="ru">Карусель в
                                                 Bootstrap 5</a>
 
                                         </li>
