--- a/html/bootstrap_grid_system.html
+++ b/html/bootstrap_grid_system.html
@@ -158,7 +158,8 @@
                                     </div>
                                     <div class="col">
                                         <div class="w3-clear nextprev">
-                                            <a class="w3-right w3-btn" href="#">Следующий
+                                            <a class="w3-right w3-btn"
+                                                href="../html/bootstrap_typography.html">Следующий
                                                 &#10095; &#10095; &#10095;</a>
                                         </div>
                                     </div>
@@ -328,7 +329,7 @@
                 </div>
                 <div class="col">
                     <div class="w3-clear nextprev">
-                        <a class="w3-right w3-btn" href="#">Следующий
+                        <a class="w3-right w3-btn" href="../html/bootstrap_typography.html">Следующий
                             &#10095; &#10095; &#10095;</a>
                     </div>
                 </div>
