--- a/html/bootstrap_containers.html
+++ b/html/bootstrap_containers.html
@@ -573,8 +573,7 @@
 
                                         </li>
                                         <li>
-                                            <a href="../html/bootstrap_input_groups.html" hreflang="ru">Группа
-                                                полей
+                                            <a href="../html/bootstrap_input_groups.html" hreflang="ru">Группа полей
                                                 ввода</a>
 
                                         </li>
