--- a/html/bootstrap_progress_bars.html
+++ b/html/bootstrap_progress_bars.html
@@ -151,14 +151,15 @@
                                 <div class="row">
                                     <div class="col-6">
                                         <div class="w3-clear nextprev">
-                                            <a class="w3-left w3-btn" href="../html/bootstrap_containers.html">&#10094;
+                                            <a class="w3-left w3-btn" href="../html/bootstrap_modal.html">&#10094;
                                                 &#10094; &#10094;
                                                 Предыдущий</a>
                                         </div>
                                     </div>
                                     <div class="col">
                                         <div class="w3-clear nextprev">
-                                            <a class="w3-right w3-btn" href="#">Следующий
+                                            <a class="w3-right w3-btn"
+                                                href="../html/bootstrap_list_groups.html">Следующий
                                                 &#10095; &#10095; &#10095;</a>
                                         </div>
                                     </div>
@@ -317,13 +318,13 @@
             <div class="row">
                 <div class="col-6">
                     <div class="w3-clear nextprev">
-                        <a class="w3-left w3-btn" href="../html/bootstrap_containers.html">&#10094; &#10094; &#10094;
+                        <a class="w3-left w3-btn" href="../html/bootstrap_modal.html">&#10094; &#10094; &#10094;
                             Предыдущий</a>
                     </div>
                 </div>
                 <div class="col">
                     <div class="w3-clear nextprev">
-                        <a class="w3-right w3-btn" href="#">Следующий
+                        <a class="w3-right w3-btn" href="../html/bootstrap_list_groups.html">Следующий
                             &#10095; &#10095; &#10095;</a>
                     </div>
                 </div>
