--- a/html/bootstrap_carousel.html
+++ b/html/bootstrap_carousel.html
@@ -151,7 +151,7 @@
                                 <div class="row">
                                     <div class="col-6">
                                         <div class="w3-clear nextprev">
-                                            <a class="w3-left w3-btn" href="../html/bootstrap_containers.html">&#10094;
+                                            <a class="w3-left w3-btn" href="../html/bootstrap_cards.html">&#10094;
                                                 &#10094; &#10094;
                                                 Предыдущий</a>
                                         </div>
@@ -316,7 +316,7 @@
             <div class="row">
                 <div class="col-6">
                     <div class="w3-clear nextprev">
-                        <a class="w3-left w3-btn" href="../html/bootstrap_containers.html">&#10094; &#10094; &#10094;
+                        <a class="w3-left w3-btn" href="../html/bootstrap_cards.html">&#10094; &#10094; &#10094;
                             Предыдущий</a>
                     </div>
                 </div>
